--- a/browser/js/common/directives/aside/nav.html
+++ b/browser/js/common/directives/aside/nav.html
@@ -10,7 +10,7 @@
       <span class="font-bold">Profile</span>
     </a>
     <ul class="nav nav-sub dk">
-      <li class="user-thum-lg" ui-sref-active="active">
+      <li ui-sref="profile" class="user-thum-lg" ui-sref-active="active">
         <span class="dropdown wrapper" >
         <span class="no-border">
           <span class="thumb-lg w-auto-folded avatar m-t-sm">
@@ -25,7 +25,7 @@
       </span>
       </li>
       <li ui-sref-active="active">
-        <a ui-sref="profile" class="editpro">
+        <a ui-sref="edit" class="editpro">
           <span>Edit Profile</span>
         </a>
       </li>
