--- a/browser/js/profile/editProfile.html
+++ b/browser/js/profile/editProfile.html
@@ -47,10 +47,10 @@
                                                     <div class="col-sm-8">
                                                         <div class="row">
                                                             <div class="col-md-6">
-                                                                <input type="text" class="form-control" placeholder="First Name">
+                                                                <input type="text" class="form-control" placeholder="First Name" ng-model="user.firstName" required>
                                                             </div>
                                                             <div class="col-md-6">
-                                                                <input type="text" class="form-control" placeholder="Last Name">
+                                                                <input type="text" class="form-control" placeholder="Last Name" ng-model="user.lastName" required>
                                                             </div>
                                                         </div>
                                                     </div>
@@ -58,34 +58,34 @@
                                                 <div class="form-group">
                                                     <label class="col-sm-2 control-label">Grade Level</label>
                                                     <div class="col-sm-8">
-                                                        <input type="text" class="form-control" placeholder="Highest Grade Level">
+                                                        <input type="text" class="form-control" placeholder="Highest Grade Level" ng-model="user.grade">
                                                     </div>
                                                 </div>
                                                 <div class="form-group">
                                                     <label class="col-sm-2 control-label">Age</label>
                                                     <div class="col-sm-8">
-                                                        <input type="text" class="form-control" placeholder="your Current Age">
+                                                        <input type="text" class="form-control" placeholder="your Current Age" ng-model="user.age" required>
                                                     </div>
                                                 </div>
                                                 <div class="form-group">
                                                     <label class="col-sm-2 control-label">Email</label>
                                                     <div class="col-sm-8">
-                                                        <input type="text" class="form-control" placeholder="Email Address">
-                                                    </div>
-                                                </div>
-                                                <div class="form-group">
-                                                    <label class="col-sm-2 control-label">Interests</label>
-                                                    <div class="col-sm-8">
-                                                        <input type="text" class="form-control" placeholder="What subjects are you interested in?">
+                                                        <input type="text" class="form-control" placeholder="Email Address" ng-model="user.email" required>
                                                     </div>
                                                 </div>
                                                 <div class="form-group">
                                                     <label class="col-sm-2 control-label">Change Password</label>
                                                     <div class="col-sm-8">
-                                                        <input type="password" class="form-control" placeholder="Password">
+                                                        <input type="password" class="form-control" placeholder="Password" ng-model="user.password">
                                                     </div>
                                                 </div>
-                                                <div class="form-group mar-btm-30">
+                                                <div class="form-group">
+                                                    <label class="col-sm-2 control-label">Interests</label>
+                                                    <div class="col-sm-8">
+                                                        <input type="text" class="form-control" placeholder="What subjects are you interested in?" ng-model="user.interests">
+                                                    </div>
+                                                </div>
+                                                <!-- <div class="form-group mar-btm-30">
                                                     <label class="col-sm-2 control-label"></label>
                                                     <div class="col-sm-8">
                                                         <div class="checkbox">
@@ -95,7 +95,7 @@
                                                             </label>
                                                         </div>
                                                     </div>
-                                                </div>
+                                                </div> -->
                                                 <div class="form-group">
                                                     <label class="col-sm-2 control-label"></label>
                                                     <div class="col-sm-8">
