--- a/browser/js/common/directives/aside/nav.html
+++ b/browser/js/common/directives/aside/nav.html
@@ -73,7 +73,7 @@
         </a>
       </li>
       <li ui-sref-active="active">
-        <a ui-sref="app.dashboard">
+        <a ui-sref="newClassroom">
           <span>Create Course</span>
         </a>
       </li>
