--- a/browser/js/common/directives/navbar/navbar.html
+++ b/browser/js/common/directives/navbar/navbar.html
@@ -29,7 +29,7 @@
          <li class="call-li"> <img src="img/call.png" alt="call" title="call"> <span>Call Us +888 234 5678</span></li>
          <li><a ui-sref="dashboard">Dashboard</a></li>
          <li><a href="">Moderators</a></li>
-         <li><a href="">Logout</a></li>
+         <li><a ng-click="logout()">Logout</a></li>
        </ul></div>
        </div></div>
         <!-- buttons -->
