--- a/browser/js/authorized/profile/editProfile.html
+++ b/browser/js/authorized/profile/editProfile.html
@@ -34,7 +34,7 @@
                                     <!--Edit Profile Tab Start-->
                                     <div class="tab-pane active" id="tab-1">
                                         <div class="wrapper-md">
-                                            <form class="form-horizontal" method="get">
+                                            <form class="form-horizontal" ng-submit="updateUser(user)">
                                                 <div class="form-group mar-20">
                                                     <label class="col-sm-2 control-label">Avatar</label>
                                                     <div class="col-sm-8">
@@ -47,10 +47,7 @@
                                                     <div class="col-sm-8">
                                                         <div class="row">
                                                             <div class="col-md-6">
-                                                                <input type="text" class="form-control" placeholder="First Name" ng-model="user.firstName" required>
-                                                            </div>
-                                                            <div class="col-md-6">
-                                                                <input type="text" class="form-control" placeholder="Last Name" ng-model="user.lastName" required>
+                                                                <input type="text" class="form-control" placeholder="Last Name" ng-model="user.name">
                                                             </div>
                                                         </div>
                                                     </div>
