--- a/browser/js/authorized/teachers/newClassroom/newClassroom.html
+++ b/browser/js/authorized/teachers/newClassroom/newClassroom.html
@@ -23,9 +23,9 @@
                             <li id="meta-tab" class="tablinks" ng-click="openBrowse('meta-tab','tab-2')">
                                 <a data-target="#tab-2" role="tab" data-toggle="tab" class="light-text tablinks"><i class="fa fa-credit-card"></i> Meta</a>
                             </li>
-                            <li id='lessons-tab' class="tablinks" ng-click="openBrowse('lessons-tab','tab-3')">
+<!--                             <li id='lessons-tab' class="tablinks" ng-click="openBrowse('lessons-tab','tab-3')">
                                 <a data-target="#tab-3" role="tab" data-toggle="tab" class="light-text tablinks"><i class="fa fa-file-text-o"></i> Lessons</a>
-                            </li>
+                            </li> -->
                         </ul>
                     </div>
                     <!--Bredcrumb End-->
@@ -84,7 +84,7 @@
                                     <!--Create Course Meta start-->
                                     <div class="tab-pane" id="tab-2">
                                         <div class="wrapper-md ">
-                                            <form class="form-horizontal" ng-submit="openBrowse('lesson-tab','tab-3')">
+                                            <form class="form-horizontal" ng-submit="createClass(newClassroom)">
                                                 <div class="form-group select-field">
                                                     <label class="col-sm-2 control-label">Category </label>
                                                     <div class="col-sm-4">
@@ -97,9 +97,9 @@
                                                     </div>
                                                 </div>
                                                 <div class="form-group">
-                                                    <label class="col-sm-2 control-label">Course Duration </label>
+                                                    <label class="col-sm-2 control-label">Course Days </label>
                                                     <div class="col-sm-8">
-                                                        <input type="text" class="form-control" placeholder="How many hours does the course list?">
+                                                        
                                                     </div>
                                                 </div>
                                                 <div class="form-group">
@@ -117,7 +117,7 @@
                                                 <div class="form-group">
                                                     <label class="col-sm-2 control-label"></label>
                                                     <div class="col-sm-8">
-                                                        <button type="submit" class="fill-btn ">Save Changes</button>
+                                                        <button type="submit" class="fill-btn ">Create Class</button>
                                                     </div>
                                                 </div>
                                             </form>
@@ -125,9 +125,9 @@
                                     </div>
                                     <!--Create Course Meta End-->
                                     <!--Create Course Lessons Start-->
-                                    <div class="tab-pane" id="tab-3">
+                                    <!-- <div class="tab-pane" id="tab-3"> -->
                                         <!--Lessons list Start-->
-                                        <div class="wrapper-md lessons-list">
+                                        <!-- <div class="wrapper-md lessons-list">
                                             <div class="clearfix max-wid-920">
                                                 <div class="title-box float-lt m-t-10">
                                                     <span class="main-title">5 Lessons</span>
@@ -206,10 +206,10 @@
                                                     </div>
                                                 </li>
                                             </ul>
-                                        </div>
+                                        </div> -->
                                         <!--Lessons list End-->
                                         <!--Add Edit Lesson Start-->
-                                        <div class="wrapper-md edit-lesson">
+                         <!--                <div class="wrapper-md edit-lesson">
                                             <form class="form-horizontal" method="get">
                                                 <div class="form-group mar-20">
                                                     <label class="col-sm-2 control-label">Preview</label>
@@ -270,10 +270,10 @@
                                                     </div>
                                                 </div>
                                             </form>
-                                        </div>
+                                        </div> -->
                                         <!--Add Edit Lesson End-->
-                                    </div>
-                                    <script type="text/javascript">
+                                    <!-- </div> -->
+                                    <!-- <script type="text/javascript">
                                     $('.add-lesson').click(function() {
                                         $('.lessons-list').hide();
                                         $('.edit-lesson').show();
@@ -282,7 +282,7 @@
                                         $('.lessons-list').show();
                                         $('.edit-lesson').hide();
                                     });
-                                    </script>
+                                    </script> -->
                                     <!--Create Course Lessons End-->
                                 </div>
                             </div>
