--- a/browser/js/authorized/authorized.html
+++ b/browser/js/authorized/authorized.html
@@ -1,6 +1,6 @@
 <navbar></navbar>
 <div class="app-aside hidden-xs bg-black">
-        <aside></aside>
+        <aside user="user"></aside>
     </div>
 <div  class="app-content fade-in-up">
     <div ui-view>
