--- a/browser/js/authorized/teachers/aside.html
+++ b/browser/js/authorized/teachers/aside.html
@@ -19,7 +19,7 @@
         </span>
         <span href class="dropdown-toggle hidden-folded no-border" dropdown-toggle>
           <span class="clear">
-            <span class="block user-pro-name">Teacher Name</span>
+            <span class="block user-pro-name">{{user.name}}</span>
           </span>
         </span>
       </span>
