--- a/browser/js/authorized/profile/editProfile.html
+++ b/browser/js/authorized/profile/editProfile.html
@@ -77,6 +77,12 @@
                                                     </div>
                                                 </div>
                                                 <div class="form-group">
+                                                    <label class="col-sm-2 control-label">Location</label>
+                                                    <div class="col-sm-8">
+                                                        <input type="text" class="form-control" placeholder="Where are you located?" ng-model="user.location">
+                                                    </div>
+                                                </div>
+                                                <div class="form-group">
                                                     <label class="col-sm-2 control-label">Interests</label>
                                                     <div class="col-sm-8">
                                                         <input type="text" class="form-control" placeholder="What subjects are you interested in?" ng-model="user.interests">
