--- a/browser/js/authorized/profile/profile.html
+++ b/browser/js/authorized/profile/profile.html
@@ -9,8 +9,8 @@
             </a>
             <div class="clear m-b">
               <div class="m-b m-t-sm">
-                <span class="h3 text-black">John.Smith</span>
-                <small class="m-l">London, UK</small>
+                <span class="h3 text-black">{{user.name}}</span>
+                <small class="m-l">{{user.location}}</small>
               </div>
               <p class="m-b">
                 <a href class="btn btn-sm btn-bg btn-rounded btn-default btn-icon"><i class="fa fa-twitter"></i></a>
