--- a/browser/js/authorized/teachers/newClassroom/newClassroom.html
+++ b/browser/js/authorized/teachers/newClassroom/newClassroom.html
@@ -88,7 +88,7 @@
                                                 <div class="form-group select-field">
                                                     <label class="col-sm-2 control-label">Category </label>
                                                     <div class="col-sm-4">
-                                                        <select name="carlist" form="carform" class="form-control" ng-model="classroom.subject">
+                                                        <select name="carlist" form="carform" class="form-control" ng-model="newClassroom.subject">
                                                             <option value="">Mathematics</option>
                                                             <option value="">Vat 2</option>
                                                             <option value="">Vat 3</option>
@@ -105,13 +105,13 @@
                                                 <div class="form-group">
                                                     <label class="col-sm-2 control-label">Start Date</label>
                                                     <div class="col-sm-8">
-                                                        <input type="text" class="form-control" placeholder="What is the course start date?">
+                                                        <input type="text" ng-model="newClassroom.startDate" class="form-control" placeholder="What is the course start date?">
                                                     </div>
                                                 </div>
                                                 <div class="form-group">
                                                     <label class="col-sm-2 control-label">End Date</label>
                                                     <div class="col-sm-8">
-                                                        <input type="text" class="form-control" placeholder="When does the course finish?">
+                                                        <input type="text" ng-model="newClassroom.endDate" class="form-control" placeholder="When does the course finish?">
                                                     </div>
                                                 </div>
                                                 <div class="form-group">
