--- a/browser/js/common/modals/jitsi/jitsi.html
+++ b/browser/js/common/modals/jitsi/jitsi.html
@@ -2,9 +2,9 @@
     <h3 class="modal-title">{{room}}</h3>
 </div>
 <div class="modal-body">
+    <button class="btn btn-primary" type="button" ng-click="test()">Join class</button>
 	<div id="jitsi"></div>
 </div>
 <div class="modal-footer">
     <button class="btn btn-primary" type="button" ng-click="close()">OK</button>
-    <button class="btn btn-primary" type="button" ng-click="test()">Cancel</button>
 </div>
