--- a/browser/js/authorized/teachers/aside.html
+++ b/browser/js/authorized/teachers/aside.html
@@ -58,7 +58,7 @@
         </a>
       </li>
       <li ui-sref-active="active">
-        <a ui-sref="app.dashboard">
+        <a ui-sref="quizDashboard">
           <span>Quiz Manager</span>
         </a>
       </li>
