azure can has upload

--- a/browser/js/authorized/classroom/classroom.html
+++ b/browser/js/authorized/classroom/classroom.html
@@ -71,7 +71,7 @@
                                             </ul>
                                         </div>
                                         <div class="row">
-                                             <button ng-if="teacher" type="file" ngf-select="addLessonDoc($file, $index)" accept="image/*" ngf-max-height="1000" ngf-max-size="10MB">Upload File</button>
+                                             <button ng-if="teacher" type="file" ngf-select="addLessonDoc($file, $index)" accept="*" ngf-max-height="1000" ngf-max-size="10MB">Upload File</button>
                                         </div>
                                         </div>
                                 </uib-accordion>
