--- a/browser/js/authorized/teachers/aside.html
+++ b/browser/js/authorized/teachers/aside.html
@@ -14,7 +14,7 @@
         <span class="dropdown wrapper" >
         <span class="no-border">
           <span class="thumb-lg w-auto-folded avatar m-t-sm">
-            <img src="img/a0.jpg" class="img-full" alt="...">
+            <img src="https://edvances.blob.core.windows.net/profile-pictures/{{user.profilePic}}" class="img-full" alt="...">
           </span>
         </span>
         <span href class="dropdown-toggle hidden-folded no-border" dropdown-toggle>
