--- a/browser/js/authorized/profile/profile.html
+++ b/browser/js/authorized/profile/profile.html
@@ -10,7 +10,7 @@
                 <div class="teach-profile">
                     <div class="teacherpro"><img src="https://edvances.blob.core.windows.net/profile-pictures/{{user.profilePic}}" alt="teacher detail" /></div>
                     <div class="pro-degree">{{user.teacherOptions.title}} <span ng-if="user.locations">located in {{user.location}}</span></div>
-                    <div class="timeperiods"><span ng-repeat="(key,value) in user.teacherOptions.times"><span>{{weekdays[key]}} from {{value.start | date:'HH:mm a'}} - {{value.end | date:'HH:mm a'}}</span></div>
+                    <div class="timeperiods"><span ng-repeat="(key,value) in user.teacherOptions.times"><span>{{weekdays[key]}} from {{value.start | date:'HH:mm'}} - {{value.end | date:'HH:mm'}}</span></div>
                     <hr class="clearfix">
                     <div class="teach-rate">
                         <p>Teacher Rating</p>
