--- a/browser/js/unauthorized/home/home.html
+++ b/browser/js/unauthorized/home/home.html
@@ -1,21 +1,37 @@
 <div id="main-banner" class="carousel slide" data-ride="carousel">
     <!-- Indicators -->
-    <ol class="carousel-indicators">
-        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-    </ol>
-    <!-- Wrapper for slides -->
-    <div class="carousel-inner" role="listbox">
-        <div class="item active full-img">
-            <img src="img/slider.jpg" alt="Chania">
-            <div class="carousel-caption container">
-                <div class="contentarea">
-                    <h2><span>One Stop Solution</span><br/>Your Education, <br/> Your way</h2>
-                    <p>Edvances brings a wonderfully simple experience for students to carry tools that supercharge their learning, with a powerful and focused tuition live video sessions</p>
-                    <a href="courses.html" class="btn btn-banner">View Courses <img src="img/continue.png" alt="read more"/></a>
+    <div id="myCarousel" class="carousel slide" data-ride="carousel">
+        <!-- Wrapper for slides -->
+        <div class="carousel-inner" role="listbox">
+            <div class="item active full-img">
+                <img src="img/slider.jpg" alt="Chania">
+                <div class="carousel-caption container">
+                    <div class="contentarea">
+                        <h2><span>One Stop Solution</span><br/>Your Education, <br/> Your way</h2>
+                        <p>Edvances brings a wonderfully simple experience for students to carry tools that supercharge their learning, with a powerful and focused tuition live video sessions</p>
+                        <a href="courses.html" class="btn btn-banner">View Courses <img src="img/continue.png" alt="read more"/></a>
+                    </div>
+                </div>
+            </div>
+            <div class="item full-img">
+                <img src="img/slider2.jpg" alt="Chania">
+                <div class="carousel-caption container">
+                    <div class="contentarea">
+                        <h2><span>One Stop Solution</span><br/>Your Education, <br/> Your way</h2>
+                        <p>Edvances brings a wonderfully simple experience for students to carry tools that supercharge their learning, with a powerful and focused tuition live video sessions</p>
+                        <a href="courses.html" class="btn btn-banner">View Courses <img src="img/continue.png" alt="read more"/></a>
+                    </div>
                 </div>
             </div>
         </div>
-    </div>
+        <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+    <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+    <span class="sr-only">Previous</span>
+  </a>
+  <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+    <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+    <span class="sr-only">Next</span>
+  </a>
 </div>
 <!-- Page Content -->
 <!-- /.search-section -->
