--- a/browser/js/authorized/classroom/classroom.html
+++ b/browser/js/authorized/classroom/classroom.html
@@ -33,9 +33,7 @@
                         </div>
                         <!--Video Stream end-->
                         <div class="no-top-border outlined clearfix courseclock pad-20">
-                            <div class="course-timer">
-                                <h3>Class on: <button class="btn" ng-repeat="(key,value) in classroom.class_times">{{weekdays[key]}} </button class="btn"></h3>
-                            </div>
+                            <div class="timeperiods"><span ng-repeat="(key,value) in classroom.class_times"><span>{{weekdays[key]}} from {{value.start | date:'HH:mm'}} - {{value.end | date:'HH:mm'}}</span></div>
                             <div class="float-rt joincls">
                                 <a ng-click="test()" ng-hide="joined" class="outlined-btn red-btn v-a-m">Join Class</a>
                                 <a ng-click="close()" ng-show="joined" class="outlined-btn red-btn v-a-m">Leave Class</a>
