--- a/browser/js/authorized/teachers/newClassroom/newClassroom.html
+++ b/browser/js/authorized/teachers/newClassroom/newClassroom.html
@@ -130,10 +130,12 @@
                                                     </div>
                                                 </div>
                                                 <div class="form-group">
-                                                    <div class="row" ng-repeat="(key,value) in days">
-                                                        <label class="col-sm-2 control-label">{{weekdays[key]}}: </label>
+                                                    <div class="row" ng-repeat="day in days track by $index" ng-show="day ==true">
+                                                        <label class="col-sm-2 control-label">{{weekdays[$index]}}: </label>
                                                         <div class="col-sm-8">
-                                                            <input type="time" id="exampleInput" name="input" ng-model="times[key]" placeholder="HH:mm:ss" required />
+                                                            <input type="time" id="exampleInput" name="input" ng-model="times[$index].start" placeholder="HH:mm:ss" required /> 
+                                                            to 
+                                                            <input type="time" id="exampleInput" name="input" ng-model="times[$index].end" placeholder="HH:mm:ss" required />
                                                         </div>
                                                     </div>
                                                 </div>
